hphp/hack/test/typecheck/classname/via_string.php
<?hh

class Foo {}

function test(): void {
  "Foo"::class;
  'Foo'::class;
}
